dropshot/tests/fail/bad_server_only18.stderr
error: endpoint `bad_endpoint` must be of the form #[endpoint { method = GET, path = "/path", ... }]
  --> tests/fail/bad_server_only18.rs:15:5
   |
15 |     #[endpoint = "strange"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^
